--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # LangGraph and LangChain Core
 langgraph>=0.2.0
+langgraph-checkpoint-sqlite>=1.0.0
 langchain>=0.3.0
 langchain-core>=0.3.0
 
@@ -21,3 +22,4 @@ aiosqlite>=0.20.0
 python-dotenv>=1.0.0
 pydantic>=2.0.0
 typing-extensions>=4.8.0
+streamlit>=1.30.0
