--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 # LangGraph and LangChain Core
-langgraph>=1.0.0
-langgraph-checkpoint-sqlite>=1.0.0
-langchain
-langchain-core
+langgraph==1.0.4
+langgraph-checkpoint-sqlite==3.0.0
+langchain==1.1.0
+langchain-core==1.1.0
 
 # Google Gemini Integration
-langchain-google-genai>=2.0.0
-google-generativeai>=0.8.0
+langchain-google-genai==3.2.0
+google-generativeai==0.8.3
 google-api-core>=2.19.0
 
 # Model Context Protocol
-mcp>=1.0.0
+mcp==1.22.0
 
 # Retry Logic
-tenacity>=8.2.0
+tenacity==8.5.0
 
 # Persistence
 aiosqlite>=0.20.0
 
 # Utilities
 python-dotenv>=1.0.0
-pydantic>=2.0.0
+pydantic==2.12.5
 typing-extensions>=4.8.0
-streamlit>=1.30.0
+streamlit==1.51.0
