--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # LangGraph and LangChain Core
 langgraph==1.0.4
 langgraph-checkpoint-sqlite==3.0.0
-langchain==1.1.0
-langchain-core==1.1.0
+langchain
+langchain-core
 
 # Google Gemini Integration
-langchain-google-genai==3.2.0
-google-generativeai==0.8.3
+langchain-google-genai>=2.0.0
+google-generativeai>=0.8.0
 google-api-core>=2.19.0
 
 # Model Context Protocol
